Updated logic of missingElem.js

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <!-- <script src="factorialRecursion.js"></script> -->
     <!-- <script src="studentsGrades.js"></script> -->
     <!-- <script src="nonRepeatingElem.js"></script> -->
-     <!-- <script src="missingElem.js"></script> -->
-    <script src="fibonacci.js"></script>
+    <script src="missingElem.js"></script>
+    <!-- <script src="fibonacci.js"></script> -->
 </head>
 <body>
     <h1>Hello World!</h1>
