Learned About DOM and its Manuplation

--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
     <!-- <script src="factorialRecursion.js"></script> -->
     <!-- <script src="studentsGrades.js"></script> -->
     <!-- <script src="nonRepeatingElem.js"></script> -->
-    <script src="missingElem.js"></script>
+    <!-- <script src="missingElem.js"></script> -->
     <!-- <script src="fibonacci.js"></script> -->
+    <!-- <script src="recursion.js"></script> -->
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div>
+        <span>Hello</span>
+        <span style="display: none;">Bye</span>
+        <script src="domManuplation.js"></script>
+    </div>
 </body>
 </html>
