Dark/Light mode logics implemented

--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
     <!-- <script src="recursion.js"></script> -->
 </head>
 <body>
-    <div>
-        <span>Hello</span>
+    <button id="mode" style="background-color: gray; color: white; border-radius: 5px;">Change Theme</button>
+    <p>This is my document</p>
+    <!-- <div>
+        <span id="Hello">Hello</span>
         <span style="display: none;">Bye</span>
-        <script src="domManuplation.js"></script>
     </div>
+    <script src="domManuplation.js"></script> -->
+    <script src="toggle.js"></script>
 </body>
 </html>
